fix: overflow hidden for footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,3 +1,8 @@
+.footer {
+  overflow: hidden;
+  position: relative;
+}
+
 .wrapper {
   height: 60px;
   position: relative;
